# ramp-onboarding-ux

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  elm.json  package-lock.json  package.json  pyproject.toml  ramp_onboarding_ux.py  renovate.json
.cursor/rules/: flask.mdc  ramp-onboarding-elm.mdc  ramp-onboarding-python.mdc
.github/workflows/: build.yml  deactivate-test.yml  deploy.yml
.nomad/: ramp-onboarding-ux.nomad
.nomad/conf/: .env.tpl  nginx.conf
elm/: Main.elm
js/: autocomplete.js  entrypoint.js
review/src/: ReviewConfig.elm
templates/: continue_in_ramp.html  email_verification_unavailable.html  form.html  ineligible.html  invite_expired.html  layout.html  provisioned.html  sso_mismatch.html  user_active.html  user_inactive.html
tests/: AddressTest.elm  BuildInitialModelTest.elm  DeliveryDateTest.elm  EmailProviderTest.elm  EncodeFormStateTest.elm  HelpersTest.elm  SubmissionChecksTest.elm  TestFixtures.elm  ValidationTest.elm
