[tool.poetry]
name = "ramp-onboarding-ux"
version = "0"
description = "Overengineered web form to facilitate onboarding users to Ramp"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.2"
Authlib = "1.6.5"
requests = "2.32.5"
ldap3 = "2.9.1"
uwsgi = "2.0.31"
sentry-sdk = {extras = ["pure-eval", "flask"], version = "2.41.0"}
google-auth = "2.41.1"
flask-caching = "2.3.1"
celery = {extras = ["redis"], version = "5.5.3"}
slack-sdk = "3.37.0"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
flake8 = "7.3.0"
flake8-bugbear = "24.12.12"
flake8-import-order = "0.19.2"
mypy = "1.18.2"
pylint = "3.3.9"
types-requests = "^2.28.11.7"
types-ldap3 = "^2.9.13.3"
celery-types = "0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']
