[tool.poetry]
name = "ramp-onboarding-ux"
version = "0"
description = "Overengineered web form to facilitate onboarding users to Ramp"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.3"
Authlib = "1.7.2"
requests = "2.34.2"
ldap3 = "2.9.1"
uwsgi = "2.0.31"
sentry-sdk = {extras = ["pure-eval", "flask"], version = "2.60.0"}
google-auth = "2.53.0"
flask-caching = "2.4.0"
celery = {extras = ["redis"], version = "5.6.3"}
slack-sdk = "3.42.0"
flask-minify = "0.50"

[tool.poetry.group.dev.dependencies]
black = "26.5.1"
flake8 = "7.3.0"
flake8-bugbear = "25.11.29"
flake8-import-order = "0.19.2"
mypy = "2.1.0"
pylint = "4.0.5"
types-ldap3 = "^2.9.13.3"
celery-types = "0.26.0"
types-authlib = "^1.6.5.20251005"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']
